Update footer design and new animation with responsive view

--- a/project.html
+++ b/project.html
@@ -281,78 +281,67 @@
 
   
   <section id="footer" class="footer">
-
-    <div class="about-us">
-
-      <h4>
-        About us
-      </h4>
-
-      <p>
-        I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur. I am text
-        block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur.
-      </p>
-
-      <p>
-        We are the champions! We are the most amazing theme of all time, yeah.
-      </p>
-
-    </div>
-
-    <div class="special-footer">
-
-      <h4>
-        Why we are special?
-      </h4>
-
-      <ul>
-        <li>>&nbsp;<span>Our magical recipe.</span></li>
-        <li>>&nbsp;<span>We care about environment.</span></li>
-        <li>>&nbsp;<span>We are trusted by hundreds of clients.</span></li>
-        <li>>&nbsp;<span>Social media loves us!</span></li>
-        <li>>&nbsp;<span>This list is super easy to create.</span></li>
-      </ul>
-    </div>
-    <div class="opening">
-      <h4>Opening Hours</h4>
-      <li>> &nbsp;Monday 10AM - 9PM</li>
-      <li>> &nbsp;Tuesday 10AM - 9PM</li>
-      <li>> &nbsp;Wednesday 10AM - 9PM</li>
-      <li>> &nbsp;Thursday 10AM - 10PM</li>
-      <li>> &nbsp;Friday 10AM - 10PM</li>
-      <li>> &nbsp;Weekends 10AM - 11PM</li>
-    </div>
-    <div class="contect-ditils">
-      <h4>Contact Details</h4>
-      <div class="item">
-        <span> <i><img src="./images/Icons/location.png" alt=""></i>Manchester Road 123-78B, Silictown 7854MD, Great
-          Country</span>
+    <div class="footer-container">
+      <div class="footer-section about-us">
+        <h4>About us</h4>
+        <p>
+          I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur. I am text
+          block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur.
+        </p>
+        <p>
+          We are the champions! We are the most amazing theme of all time, yeah.
+        </p>
       </div>
-      <div class="item">
-        <span><i><img src="./images/Icons/phone-gray.png" alt=""></i><a href="">+46 123 456 789</a></span>
+
+      <div class="footer-section special-footer">
+        <h4>Why we are special?</h4>
+        <ul>
+          <li><span class="arrow">›</span><span>Our magical recipe.</span></li>
+          <li><span class="arrow">›</span><span>We care about environment.</span></li>
+          <li><span class="arrow">›</span><span>We are trusted by hundreds of clients.</span></li>
+          <li><span class="arrow">›</span><span>Social media loves us!</span></li>
+          <li><span class="arrow">›</span><span>This list is super easy to create.</span></li>
+        </ul>
       </div>
-      <div class="item">
-        <span><i><img src="./images/Icons/email-solid.png" alt=""></i><a href="">hello@sitename.com</a></span>
+
+      <div class="footer-section opening">
+        <h4>Opening Hours</h4>
+        <ul>
+          <li><span class="arrow">›</span>Monday 10AM - 9PM</li>
+          <li><span class="arrow">›</span>Tuesday 10AM - 9PM</li>
+          <li><span class="arrow">›</span>Wednesday 10AM - 9PM</li>
+          <li><span class="arrow">›</span>Thursday 10AM - 10PM</li>
+          <li><span class="arrow">›</span>Friday 10AM - 10PM</li>
+          <li><span class="arrow">›</span>Weekends 10AM - 11PM</li>
+        </ul>
       </div>
-      <div class="item">
-        <span><i><img src="./images/Icons/earth.png" alt=""></i><a href="">http://www.sitename.com</a></span>
+
+      <div class="footer-section contect-ditils">
+        <h4>Contact Details</h4>
+        <div class="item">
+          <span> <i><img src="./images/Icons/location.png" alt=""></i>Manchester Road 123-78B, Silictown 7854MD, Great
+            Country</span>
+        </div>
+        <div class="item">
+          <span><i><img src="./images/Icons/phone-gray.png" alt=""></i><a href="">+46 123 456 789</a></span>
+        </div>
+        <div class="item">
+          <span><i><img src="./images/Icons/email-solid.png" alt=""></i><a href="">hello@sitename.com</a></span>
+        </div>
+        <div class="item">
+          <span><i><img src="./images/Icons/earth.png" alt=""></i><a href="">http://www.sitename.com</a></span>
+        </div>
       </div>
     </div>
   </section>
 
-
-
-  
   <div class="second-footer">
     <div class="img-footer">
-      <img src="./images/bakery-light-1.png" alt="">
-
-
+      <img src="./images/bakery-light-1.png" alt="Bakery Logo">
     </div>
     <p>Copyright 2017. All rights reserved.</p>
     <div class="icon-footer">
-      <span class="face">
-        <a href=""><i><img src="./images/Icons/facebook.png" alt=""></i></a>
+      <a href=""><i><img src="./images/Icons/facebook.png" alt=""></i></a>
       </span>
       <a class="gogle" href=""><i><img src="./images/Icons/google.png" alt=""></i></a>
       <a class="linkedin" href=""><i><img src="./images/Icons/linkedin.png" alt=""></i></a>
